--- a/src/pages/wildstonecode/wildstonecode.scss
+++ b/src/pages/wildstonecode/wildstonecode.scss
@@ -76,7 +76,12 @@
 		margin-top: 18vh;
 		text-align: center;
 			@include respond-until(sm) {
-				margin-top: 9vh;
+				margin-top: 4em;
+			}
+			@include respond-until(sm) {
+				.fold3-imageitem2{
+					margin-top: 4em;
+				}
 			}
 	}
 
@@ -89,7 +94,8 @@
 		@include respond-until(sm) {
 			min-height: 15vh;
 			padding: 10em 0;
-			margin-top: 9vh;
+			margin-top: 4em;
+			margin-bottom: 4em;
 		}
 	}
 	
